--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "cors": "^2.8.5",
     "dotenv": "^9.0.0",
     "express": "^4.17.1",
-    "morgan": "^1.10.0",
-    "open": "^8.0.8"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
